Changing non-active render layer node "layer", changes the "layer" of active one as well. #53950

Closed
opened 2018-01-30 20:00:17 +01:00 by Dalai Felinto · 7 comments

Blender Version
Broken: 7b675e0dc4 (HEAD)
Worked: 2.79

Short description of error
By changing one render layer node I end up changing the layer of another node as well.

Exact steps for others to reproduce the error
compo.blend

And change "layer" of the left-most node. It will affect the right-most node as well. Note, do not select the left-most node, change the value by directly clicking in the pulldown "layer" menu.

This issue only happens if the active node is not the one I'm trying to change.

**Blender Version** Broken: 7b675e0dc411 (HEAD) Worked: 2.79 **Short description of error** By changing one render layer node I end up changing the layer of another node as well. **Exact steps for others to reproduce the error** [compo.blend](https://archive.blender.org/developer/F2044116/compo.blend) And change "layer" of the left-most node. It will affect the right-most node as well. Note, do not select the left-most node, change the value by directly clicking in the pulldown "layer" menu. This issue only happens if the active node is not the one I'm trying to change.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2018-01-30 20:01:21 +01:00
Author
Owner

If I do the change via Python I don't have this problem:

bpy.context.scene.node_tree.nodes['abc'].layer = 'RenderLayer'
If I do the change via Python I don't have this problem: ``` bpy.context.scene.node_tree.nodes['abc'].layer = 'RenderLayer' ```
Dalai Felinto removed their assignment 2018-01-30 21:18:10 +01:00
Campbell Barton was assigned by Dalai Felinto 2018-01-30 21:18:10 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Owner

@ideasman42 could you take a look at this?

This seems related to the USE_ALLSELECT causing CompositorNodeRLayers_layer_set to be called twice:

  • Once for the desired node P599
  • Once for the selected node P600, called as part of ui_selectcontext_apply.
@ideasman42 could you take a look at this? This seems related to the USE_ALLSELECT causing `CompositorNodeRLayers_layer_set` to be called twice: * Once for the desired node [P599](https://archive.blender.org/developer/P599.txt) * Once for the selected node [P600](https://archive.blender.org/developer/P600.txt), called as part of `ui_selectcontext_apply`.

This issue was referenced by 807713e4f2

This issue was referenced by 807713e4f291bdb704c4a0c3e86ace40ef17723f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Note that 2.8 was changed from master, so editing the selection was always enabled.
Logically there is no bug here since this is exactly what the option was intended to do.

Reverted the change in 2.8 to use Alt (as master does).

Note that 2.8 was changed from master, so editing the selection was always enabled. Logically there is no bug here since this is exactly what the option was intended to do. Reverted the change in 2.8 to use Alt (as master does).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53950
No description provided.