UI: re-enable alt-key for editing selection

Fixes T53950 where changing node layers applies to all selected nodes.